[package]
name = "resolute"
version = "0.2.0"
description = "Resonite mod manifest and dependency resolution library"
authors = ["Schuyler Cebulskie <me@gawdl3y.dev>"]
license = ""
repository = ""
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.5", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
path-clean = "1.0"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
