[package]
name = "resolute"
version = "0.5.0"
description = "Resonite mod manager, manifest, and dependency resolution library"
authors = ["Schuyler Cebulskie <me@gawdl3y.dev>"]
license = ""
repository = ""
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.5", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
path-clean = "1.0"
sha2 = "0.10"
steamlocate = "2.0.0-beta.2"
native_db = { version = "0.5", optional = true }
native_model = { version = "0.4", optional = true }

[features]
default = ["db"]
db = ["native_db", "native_model"]
