[package]
name = "resolute-app"
version = "0.8.3"
description = "Resolute, a mod manager for Resonite"
authors = ["Schuyler Cebulskie <me@gawdl3y.dev>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Gawdl3y/Resolute"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
resolute = { path = "../resolute" }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
log = "0.4"
sha2 = "0.10"
itertools = "0.13"
path-clean = "1.0"
opener = "0.7"
reqwest = { version = "0.12", features = [
	"stream",
	"rustls-tls",
	"http2",
	"charset",
	"gzip",
	"brotli",
	"zstd",
	"deflate",
], default-features = false }
tauri = { version = "2.0.0-beta.22", features = [] }
tauri-plugin-deep-link = "2.0.0-beta.6"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-fs = "2.0.0-beta.9"
tauri-plugin-notification = "2.0.0-beta.7"
tauri-plugin-process = "2.0.0-beta.6"
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-updater = "2.0.0-beta.7"
tauri-plugin-log = "2.0.0-beta.6"
tauri-plugin-single-instance = "2.0.0-beta.9"
tauri-plugin-window-state = "2.0.0-beta.9"
tauri-plugin-store = "2.0.0-beta.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
